tests/baselines/reference/parserTypeQuery4.errors.txt
==== tests/cases/conformance/parser/ecmascript5/Types/parserTypeQuery4.ts (2 errors) ====
    var v: typeof A.;
                    ~
!!! error TS1003: Identifier expected.
                  ~
!!! error TS2304: Cannot find name 'A'.